src/maths_parser.output
Terminals unused in grammar

   T_EXPONENT


State 9 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 4 shift/reduce
State 60 conflicts: 2 shift/reduce
State 61 conflicts: 2 shift/reduce
State 62 conflicts: 3 shift/reduce
State 80 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 2 shift/reduce
State 166 conflicts: 4 shift/reduce
State 167 conflicts: 4 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 174 conflicts: 3 shift/reduce
State 175 conflicts: 3 shift/reduce
State 259 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROG

    2 PROG: PROG FUNDEC
    3     | FUNDEC
    4     | PROG G_DEC_ST
    5     | G_DEC_ST
    6     | STRUCT_ST
    7     | PROG STRUCT_ST

    8 STRUCT_ST: T_STRUCT T_VARIABLE T_LCURL INSIDE T_RCURL T_SEMIC

    9 INSIDE: INSIDE_VARS
   10       | INSIDE INSIDE_VARS

   11 INSIDE_VARS: TYPE T_VARIABLE T_SEMIC

   12 FUNDEC: TYPE T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC T_LCURL SCOPE T_RCURL
   13       | TYPE T_VARIABLE T_LBRAC T_RBRAC T_LCURL SCOPE T_RCURL
   14       | TYPE T_VARIABLE T_LBRAC PARAM_LIST T_RBRAC T_SEMIC
   15       | TYPE T_VARIABLE T_LBRAC T_RBRAC T_SEMIC

   16 TYPE: T_INT
   17     | T_VOID
   18     | T_CHAR
   19     | T_SHORT
   20     | T_LONG
   21     | T_FLOAT
   22     | T_DOUBLE
   23     | T_SIGNED
   24     | T_STRUCT

   25 PARAM_LIST: PARAM_LIST T_COMMA TYPE T_VARIABLE
   26           | TYPE T_VARIABLE
   27           | TYPE POINTER
   28           | PARAM_LIST T_COMMA TYPE POINTER

   29 SCOPE: SCOPE STMT
   30      | STMT

   31 EXPR_ST: T_SEMIC
   32        | EXPR T_SEMIC

   33 EXPR: SPECIAL

   34 SPECIAL: SPECIAL_ASSIGN
   35        | EXPR T_DOT EXPR

   36 SPECIAL_ASSIGN: EXPR_ASSIGN
   37               | T_ASSIGN EXPR_ASSIGN

   38 EXPR_ASSIGN: EXPR_COND
   39            | T_VARIABLE T_ASSIGN EXPR_ASSIGN
   40            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_ASSIGN EXPR_ASSIGN
   41            | T_VARIABLE T_ADDEQUAL EXPR_ASSIGN
   42            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_ADDEQUAL EXPR_ASSIGN
   43            | T_VARIABLE T_SUBEQUAL EXPR_ASSIGN
   44            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_SUBEQUAL EXPR_ASSIGN
   45            | T_VARIABLE T_MULEQUAL EXPR_ASSIGN
   46            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_MULEQUAL EXPR_ASSIGN
   47            | T_VARIABLE T_DIVEQUAL EXPR_ASSIGN
   48            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_DIVEQUAL EXPR_ASSIGN
   49            | T_VARIABLE T_MODEQUAL EXPR_ASSIGN
   50            | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_MODEQUAL EXPR_ASSIGN

   51 EXPR_COND: OR

   52 OR: AND
   53   | OR T_OR BOR

   54 AND: BOR
   55    | AND T_AND BOR

   56 BOR: BXOR
   57    | BOR T_BOR BXOR

   58 BXOR: BAND
   59     | BXOR T_BXOR BXOR

   60 BAND: EQUAL
   61     | BAND T_BAND EQUAL

   62 EQUAL: LESS
   63      | EQUAL T_EQUAL LESS
   64      | EQUAL T_NEQUAL LESS

   65 LESS: SHIFT
   66     | LESS T_LT SHIFT
   67     | LESS T_GT SHIFT
   68     | LESS T_LEQUAL SHIFT
   69     | LESS T_GEQUAL SHIFT

   70 SHIFT: ADD
   71      | SHIFT T_LSHIFT ADD
   72      | SHIFT T_RSHIFT ADD

   73 ADD: MUL
   74    | ADD T_PLUS MUL
   75    | ADD T_MINUS MUL

   76 MUL: UNARY
   77    | MUL T_TIMES UNARY
   78    | MUL T_DIVIDE UNARY
   79    | MUL T_MOD UNARY

   80 UNARY: POSTFIX
   81      | T_DECREM T_VARIABLE
   82      | T_DECREM T_VARIABLE T_LSBRAC EXPR T_RSBRAC
   83      | T_INCREM T_VARIABLE
   84      | T_INCREM T_VARIABLE T_LSBRAC EXPR T_RSBRAC

   85 POSTFIX: PRIMATIVE
   86        | T_VARIABLE T_INCREM
   87        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_INCREM
   88        | T_VARIABLE T_DECREM
   89        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_DECREM
   90        | T_VARIABLE T_LBRAC CALL_PARAM T_RBRAC
   91        | T_VARIABLE T_LBRAC T_RBRAC
   92        | T_PLUS EXPR
   93        | T_MINUS EXPR
   94        | T_NOT EXPR
   95        | T_BNOT EXPR

   96 CALL_PARAM: CALL_PARAM T_COMMA EXPR
   97           | EXPR

   98 PRIMATIVE: T_VARIABLE
   99          | T_NUMBER
  100          | T_LBRAC EXPR T_RBRAC
  101          | T_VARIABLE T_LSBRAC EXPR T_RSBRAC

  102 POINTER: T_TIMES T_VARIABLE

  103 REFERENCE: T_BAND T_VARIABLE

  104 STMT: JMP_ST
  105     | EXPR_ST
  106     | IF_ST
  107     | ITER_ST
  108     | NEW_SCOPE
  109     | DEC_ST

  110 JMP_ST: T_RETURN T_SEMIC
  111       | T_RETURN EXPR T_SEMIC
  112       | T_RETURN POINTER T_SEMIC
  113       | T_BREAK T_SEMIC
  114       | T_CONTINUE T_SEMIC

  115 IF_ST: T_IF T_LBRAC EXPR T_RBRAC STMT
  116      | T_IF T_LBRAC EXPR T_RBRAC STMT T_ELSE STMT
  117      | T_SWITCH T_LBRAC T_VARIABLE T_RBRAC T_LCURL CASE T_RCURL

  118 CASE: T_CASE T_NUMBER T_COLON STMT T_BREAK T_SEMIC
  119     | T_CASE T_NUMBER T_COLON STMT T_BREAK T_SEMIC CASE
  120     | T_CASE T_NUMBER T_COLON STMT
  121     | T_CASE T_NUMBER T_COLON STMT CASE
  122     | T_DEFAULT T_COLON STMT

  123 ITER_ST: T_WHILE T_LBRAC EXPR T_RBRAC STMT
  124        | T_DO STMT T_WHILE T_LBRAC EXPR T_RBRAC T_SEMIC
  125        | T_FOR T_LBRAC EXPR_ST EXPR_ST T_RBRAC STMT
  126        | T_FOR T_LBRAC EXPR_ST EXPR_ST EXPR T_RBRAC STMT

  127 NEW_SCOPE: T_LCURL SCOPE T_RCURL

  128 DEC_ST: TYPE DEC_LIST T_SEMIC
  129       | TYPE POINTER T_ASSIGN REFERENCE T_SEMIC
  130       | TYPE POINTER T_SEMIC
  131       | POINTER T_ASSIGN EXPR T_SEMIC

  132 DEC_LIST: VAR_DEC
  133         | DEC_LIST T_COMMA VAR_DEC

  134 VAR_DEC: T_VARIABLE T_ASSIGN T_LSBRAC EXPR T_RSBRAC
  135        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC
  136        | T_VARIABLE T_LSBRAC T_RSBRAC
  137        | T_VARIABLE T_LSBRAC EXPR T_RSBRAC T_ASSIGN T_LCURL LIST T_RCURL
  138        | T_VARIABLE T_ASSIGN EXPR
  139        | T_VARIABLE
  140        | T_VARIABLE T_VARIABLE

  141 LIST: PRIMATIVE
  142     | PRIMATIVE T_COMMA LIST

  143 G_DEC_ST: TYPE G_DEC_LIST T_SEMIC

  144 G_DEC_LIST: G_VAR_DEC
  145           | G_DEC_LIST T_COMMA G_VAR_DEC

  146 G_VAR_DEC: T_VARIABLE T_ASSIGN T_LSBRAC EXPR T_RSBRAC
  147          | T_VARIABLE T_LSBRAC EXPR T_RSBRAC
  148          | T_VARIABLE T_LSBRAC T_RSBRAC
  149          | T_VARIABLE T_ASSIGN EXPR
  150          | T_VARIABLE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TIMES (258) 77 102
T_DIVIDE (259) 78
T_PLUS (260) 74 92
T_MINUS (261) 75 93
T_EXPONENT (262)
T_LBRAC (263) 12 13 14 15 90 91 100 115 116 117 123 124 125 126
T_RBRAC (264) 12 13 14 15 90 91 100 115 116 117 123 124 125 126
T_LCURL (265) 8 12 13 117 127 137
T_RCURL (266) 8 12 13 117 127 137
T_LSBRAC (267) 40 42 44 46 48 50 82 84 87 89 101 134 135 136 137 146
    147 148
T_RSBRAC (268) 40 42 44 46 48 50 82 84 87 89 101 134 135 136 137 146
    147 148
T_NUMBER (269) 99 118 119 120 121
T_VARIABLE (270) 8 11 12 13 14 15 25 26 39 40 41 42 43 44 45 46 47
    48 49 50 81 82 83 84 86 87 88 89 90 91 98 101 102 103 117 134 135
    136 137 138 139 140 146 147 148 149 150
T_SEMIC (271) 8 11 14 15 31 32 110 111 112 113 114 118 119 124 128
    129 130 131 143
T_COMMA (272) 25 28 96 133 142 145
T_COLON (273) 118 119 120 121 122
T_DOT (274) 35
T_LSHIFT (275) 71
T_RSHIFT (276) 72
T_EQUAL (277) 63
T_NEQUAL (278) 64
T_GT (279) 67
T_LT (280) 66
T_LEQUAL (281) 68
T_GEQUAL (282) 69
T_ASSIGN (283) 37 39 40 129 131 134 137 138 146 149
T_BNOT (284) 95
T_NOT (285) 94
T_AND (286) 55
T_OR (287) 53
T_BAND (288) 61 103
T_BOR (289) 57
T_BXOR (290) 59
T_MOD (291) 79
T_ADDEQUAL (292) 41 42
T_SUBEQUAL (293) 43 44
T_INCREM (294) 83 84 86 87
T_DECREM (295) 81 82 88 89
T_DIVEQUAL (296) 47 48
T_MULEQUAL (297) 45 46
T_MODEQUAL (298) 49 50
T_WHILE (299) 123 124
T_DO (300) 124
T_IF (301) 115 116
T_ELSE (302) 116
T_FOR (303) 125 126
T_BREAK (304) 113 118 119
T_CONTINUE (305) 114
T_SWITCH (306) 117
T_CASE (307) 118 119 120 121
T_DEFAULT (308) 122
T_INT (309) 16
T_VOID (310) 17
T_CHAR (311) 18
T_SHORT (312) 19
T_LONG (313) 20
T_FLOAT (314) 21
T_DOUBLE (315) 22
T_SIGNED (316) 23
T_RETURN (317) 110 111 112
T_STRUCT (318) 8 24


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
ROOT (65)
    on left: 1, on right: 0
PROG (66)
    on left: 2 3 4 5 6 7, on right: 1 2 4 7
STRUCT_ST (67)
    on left: 8, on right: 6 7
INSIDE (68)
    on left: 9 10, on right: 8 10
INSIDE_VARS (69)
    on left: 11, on right: 9 10
FUNDEC (70)
    on left: 12 13 14 15, on right: 2 3
TYPE (71)
    on left: 16 17 18 19 20 21 22 23 24, on right: 11 12 13 14 15 25
    26 27 28 128 129 130 143
PARAM_LIST (72)
    on left: 25 26 27 28, on right: 12 14 25 28
SCOPE (73)
    on left: 29 30, on right: 12 13 29 127
EXPR_ST (74)
    on left: 31 32, on right: 105 125 126
EXPR (75)
    on left: 33, on right: 32 35 40 42 44 46 48 50 82 84 87 89 92 93
    94 95 96 97 100 101 111 115 116 123 124 126 131 134 135 137 138
    146 147 149
SPECIAL (76)
    on left: 34 35, on right: 33
SPECIAL_ASSIGN (77)
    on left: 36 37, on right: 34
EXPR_ASSIGN (78)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50, on right: 36 37
    39 40 41 42 43 44 45 46 47 48 49 50
EXPR_COND (79)
    on left: 51, on right: 38
OR (80)
    on left: 52 53, on right: 51 53
AND (81)
    on left: 54 55, on right: 52 55
BOR (82)
    on left: 56 57, on right: 53 54 55 57
BXOR (83)
    on left: 58 59, on right: 56 57 59
BAND (84)
    on left: 60 61, on right: 58 61
EQUAL (85)
    on left: 62 63 64, on right: 60 61 63 64
LESS (86)
    on left: 65 66 67 68 69, on right: 62 63 64 66 67 68 69
SHIFT (87)
    on left: 70 71 72, on right: 65 66 67 68 69 71 72
ADD (88)
    on left: 73 74 75, on right: 70 71 72 74 75
MUL (89)
    on left: 76 77 78 79, on right: 73 74 75 77 78 79
UNARY (90)
    on left: 80 81 82 83 84, on right: 76 77 78 79
POSTFIX (91)
    on left: 85 86 87 88 89 90 91 92 93 94 95, on right: 80
CALL_PARAM (92)
    on left: 96 97, on right: 90 96
PRIMATIVE (93)
    on left: 98 99 100 101, on right: 85 141 142
POINTER (94)
    on left: 102, on right: 27 28 112 129 130 131
REFERENCE (95)
    on left: 103, on right: 129
STMT (96)
    on left: 104 105 106 107 108 109, on right: 29 30 115 116 118 119
    120 121 122 123 124 125 126
JMP_ST (97)
    on left: 110 111 112 113 114, on right: 104
IF_ST (98)
    on left: 115 116 117, on right: 106
CASE (99)
    on left: 118 119 120 121 122, on right: 117 119 121
ITER_ST (100)
    on left: 123 124 125 126, on right: 107
NEW_SCOPE (101)
    on left: 127, on right: 108
DEC_ST (102)
    on left: 128 129 130 131, on right: 109
DEC_LIST (103)
    on left: 132 133, on right: 128 133
VAR_DEC (104)
    on left: 134 135 136 137 138 139 140, on right: 132 133
LIST (105)
    on left: 141 142, on right: 137 142
G_DEC_ST (106)
    on left: 143, on right: 4 5
G_DEC_LIST (107)
    on left: 144 145, on right: 143 145
G_VAR_DEC (108)
    on left: 146 147 148 149 150, on right: 144 145


State 0

    0 $accept: . ROOT $end

    T_INT     shift, and go to state 1
    T_VOID    shift, and go to state 2
    T_CHAR    shift, and go to state 3
    T_SHORT   shift, and go to state 4
    T_LONG    shift, and go to state 5
    T_FLOAT   shift, and go to state 6
    T_DOUBLE  shift, and go to state 7
    T_SIGNED  shift, and go to state 8
    T_STRUCT  shift, and go to state 9

    ROOT       go to state 10
    PROG       go to state 11
    STRUCT_ST  go to state 12
    FUNDEC     go to state 13
    TYPE       go to state 14
    G_DEC_ST   go to state 15


State 1

   16 TYPE: T_INT .

    $default  reduce using rule 16 (TYPE)


State 2

   17 TYPE: T_VOID .

    $default  reduce using rule 17 (TYPE)


State 3

   18 TYPE: T_CHAR .

    $default  reduce using rule 18 (TYPE)


State 4

   19 TYPE: T_SHORT .

    $default  reduce using rule 19 (TYPE)


State 5

   20 TYPE: T_LONG .

    $default  reduce using rule 20 (TYPE)


State 6

   21 TYPE: T_FLOAT .

    $default  reduce using rule 21 (TYPE)


State 7

   22 TYPE: T_DOUBLE .

    $default  reduce using rule 22 (TYPE)


State 8

   23 TYPE: T_SIGNED .

    $default  reduce using rule 23 (TYPE)


State 9

    8 STRUCT_ST: T_STRUCT . T_VARIABLE T_LCURL INSIDE T_RCURL T_SEMIC
   24 TYPE: T_STRUCT .

    T_VARIABLE  shift, and go to state 16

    T_VARIABLE  [reduce using rule 24 (TYPE)]


State 10

    0 $accept: ROOT . $end

    $end  shift, and go to state 17


State 11

    1 ROOT: PROG .
    2 PROG: PROG . FUNDEC
    4     | PROG . G_DEC_ST
    7     | PROG . STRUCT_ST
